<resources>
    <string name="app_name">GoogleNowFeed</string>
    <string name="title">Article Title</string>
    <string name="url">Article Url</string>
    <string name="points">Points</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="titleNotes">Title of Note</string>
    <string name="description">Description</string>
    <string name="save_note">Save</string>
    <string name="get_notes">Load</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">message</string>
    <string name="time_stamp">time_stamp</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="Main2Activity">Main2Activity</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
</resources>
