<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding= "true">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/message"/>
        <TextView
            android:id="@+id/time_stamp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_stamp"/>
        <TextView
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/latitude"/>
        <TextView
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/longitude"/>


    </android.support.v7.widget.CardView>

</LinearLayout>
