<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.nyc.googlenowfeed.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <android.support.v7.widget.CardView
        android:id="@+id/hackerCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding= "true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message"/>
            <TextView
                android:id="@+id/time_stamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_stamp"/>
            <TextView
                android:id="@+id/latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitude"/>
            <TextView
                android:id="@+id/longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitude"/>
        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>
